2 files modified css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,15 @@
 <h3>Accent color for a progress element:</h3>
 <label for="file">Downloading progress:</label>
 <progress id="file" value="72" max="100"> 72% </progress>
+<body>
+<h1>The align-content Property</h1>
+<div id="main">
+  <div style="background-color:green;"></div>
+  <div style="background-color:lightpink;"></div>
+  <div style="background-color:pink;"></div>
+</div>
+<p><b>Note:</b>happy brithday.</p>
+</body>
 </body>
 </html>
 
