--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,6 +17,21 @@ input[type=range] {
 progress {
   accent-color: hsl(39, 100%, 50%);
 }
-
+</style> 
+</head>
+<style>
+<head>
+#main {
+  width: 70px;
+  height: 300px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
+#main div {
+  width: 70px;
+  height: 70px;
+}
 </style>
 </head>
